working ky017 tilt sensor visualization

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "osh-cliend-dev-template",
-  "version": "2.0.0",
-  "description": "OSH Client Development Template",
-  "main": "src/App.tsx",
+  "name": "osh-client-dev-template",
+  "version": "0.0.0",
+  "description": "OSH Client Development",
+  "main": "src/KY017App.tsx",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/opensensorhub/osh-client-dev-template.git"
@@ -17,6 +17,7 @@
     "OGC",
     "SensorML"
   ],
+  "proxy": "http://192.168.1.136:8181",
   "author": "OSH community",
   "license": "ISC",
   "bugs": {
@@ -65,6 +66,8 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "cesium": "^1.114.0",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-moment": "^1.0.1",
     "file-loader": "^6.2.0",
     "html-plugin": "^0.1.0",
     "html-webpack-tags-plugin": "^3.0.2",
@@ -76,6 +79,7 @@
     "patch-package": "^6.5.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
